include "github.com/immune-gmbh/AttestationFailureAnalysisService/if/tpm.thrift"

namespace go immune.AttestationFailureAnalysisService.if.rtp
namespace py immune.AttestationFailureAnalysisService.rtp
namespace py3 immune.AttestationFailureAnalysisService
namespace cpp2 immune.AttestationFailureAnalysisService

struct Firmware {
  1: FirmwareMeta Metadata;
  2: ImageFile ImageFile;
}

struct FirmwareMeta {
  // ID is the FBID of the firmware, field "id" in xdb.rtp_firmware
  1: i64 ID;

  2: FirmwareType Type;
  3: i64 ModelFamilyID;
  4: list<i64> ModelIDs;
  5: string Version;
  6: string ReleaseDate;
  7: optional string FirmwareEverstoreHandle;
  8: optional string ChangeLogEverstoreHandle;
  9: optional string TarballFilename; // field called "filename"
  10: optional i64 UploaderFBID;
  11: list<PCRValue> PCRValues;
  12: QualificationStatus QualificationStatus;
  13: EvaluationStatus EvaluationStatus;
}

struct ImageFile {
  // unfortunately, image filename does not exist in RTP Firmware Table,
  // therefore we move "Filename" outside of FirmwareMeta :(
  1: string Name;
  2: binary Data;
}

enum FirmwareType {
  Undefined = 0,
  BIOS = 1,
  BMC = 2,
  Flash = 3,
  RAID = 4,
  NIC = 5,
  LinuxBoot = 21,
  OpenBMC = 37,
}

// See "qualification_status" in
// fbcode/nodeapi/projects/metadata/rtp_firmware/entschemas/EntRtpFirmwareSchema.schema
enum QualificationStatus {
  UNTESTED = 0,
  HAVOC_TESTING = 1,
  CSP_TESTING = 2,
  PRODUCTION = 3,
  BAD = 4,
  UNSCANNED = 5,
  UNPACKAGED = 6,
  NEEDS_REVIEW = 7,
}

enum EvaluationStatus {
  MASS_PRODUCTION = 0,
  EVALUATION = 1,
  EVT = 2,
  DVT = 3,
  PVT = 4,
  IT = 6,
  MP_TESTING = 7,
  EDGE = 8,
  MP_PILOT = 9,
  SNEAK_PEEK = 10,
  LAB = 11,
}

struct PCRValue {
  1: byte Index;
  2: tpm.Digest_ Digest;
  3: PCRProperties Properties;
}

struct PCRProperties {
  1: optional PCRPropertiesAFAS AFAS;
  2: optional PCRPropertiesTPM TPM;
  3: optional PCRPropertiesIntel Intel;
  4: optional PCRPropertiesAMD AMD;
}

struct PCRPropertiesAFAS {
  1: optional bool AutoGenerated;
}

struct PCRPropertiesTPM {
  1: optional tpm.Version Version;
}

struct PCRPropertiesIntel {
  1: optional bool TXTEnabled;
  2: optional bool DBI;
  3: optional bool DCD;
}

struct PCRPropertiesAMD {
  1: optional bool PlatformSecureBoot;
}
